deploy/kustomize/overlays/zap/controllers/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appmesh-prometheus
  namespace: appmesh-system
  annotations:
    kubernetes.io/ingress.class: alb

    # ALB config
    alb.ingress.kubernetes.io/scheme: internet-facing           # change to "internal" if you want it private
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: corbie-sec
    alb.ingress.kubernetes.io/subnets: subnet-07be2c40291c50b27, subnet-04adb4301abb5d25d, subnet-0ed1b6f76c8e8a377

    # TLS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:593518286265:certificate/921e7d63-7381-454c-90dd-6c8da2f037e2
    alb.ingress.kubernetes.io/ssl-redirect: '443'

    # Health check
    alb.ingress.kubernetes.io/healthcheck-path: /-/healthy
spec:
  ingressClassName: alb
  rules:
  - host: zap-prometheus.sec.corbietechnology.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: appmesh-prometheus
            port:
              number: 9090
